Category list updated

--- a/www/templates/Grocery-menu.html
+++ b/www/templates/Grocery-menu.html
@@ -1,47 +1,35 @@
-<ion-view view-title="Vous déplacer">
+<ion-view view-title="Alimentation Generale">
 	<ion-content>
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Location de Vélos
+		 Coups de Cœur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Location de Voiture
+		  Bons Plans
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Boulangerie
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Autocars / Navettes
+		  Boucherie - Charcuterie
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Taxis
+		 Poissonnerie
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bus Discothèque
+		 Epicerie
 		</ion-item>
-
+		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bateaux
+		 Primeur
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Taxi
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bus
-		</ion-item>
-
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Transports à la Personne
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		    A Pied ou à Vélo
-		</ion-item>
-		  
+		 
 		 
 	  </ion-list>
 	</ion-content>
