--- a/www/templates/activity-menu.html
+++ b/www/templates/activity-menu.html
@@ -8,17 +8,12 @@
 		  </a>
 		  
 		  <a class="item item-icon-right" href="#/app/sports-recreation">
-			 <!--Sports - Détente-->Activités sportives-détentes
+			 Sports - détente
 			<i class="icon icon18 ion-chevron-right"></i>
 		  </a>
 		  
 		  <a class="item item-icon-right" href="#/app/trade">
 			Commerce
-			<i class="icon icon18 ion-chevron-right"></i>
-		  </a>
-		  
-		  <a class="item item-icon-right" href="#/app/culture">
-			 Culture
 			<i class="icon icon18 ion-chevron-right"></i>
 		  </a>
 		  
@@ -33,6 +28,5 @@
 		  </a>
 		   
 	  </ion-list>
-	<!-- <button class="button button-calm button-custom" ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>-->
 	</ion-content>
 </ion-view>
