--- a/www/templates/artisans-menu.html
+++ b/www/templates/artisans-menu.html
@@ -1,48 +1,68 @@
-<ion-view view-title="Vous déplacer">
+<ion-view view-title="Artisans">
 	<ion-content>
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Location de Vélos
+		 Coups de Cœur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Location de Voiture
+		  Bons Plans
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Autocars / Navettes
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Taxis
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bus Discothèque
-		</ion-item>
-
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bateaux
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Taxi
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bus
-		</ion-item>
-
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Transports à la Personne
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		    A Pied ou à Vélo
-		</ion-item>
-		  
 		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Maçon
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Electricien
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Couvreur – Charpentier
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Plombier – Chauffagiste
+		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Menuisier
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Carreleur
+		</ion-item> 
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Façadier
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Architecte/Maitre d’oeuvre
+		</ion-item>   
+		  
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		 Sérurier
+		</ion-item> 
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Multiservice
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		Peintre
+		</ion-item>   
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		 Ferronnier
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		Jardinier
+		</ion-item>   
+		  
 	  </ion-list>
 	</ion-content>
 </ion-view>
