--- a/www/templates/association-menu.html
+++ b/www/templates/association-menu.html
@@ -7,7 +7,7 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-			D’entraide
+			Social
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -15,11 +15,19 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Culturelles et de loisirs
+		   Culturelles 
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Professionnelles
+		 Loisirs
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Environnementales 
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Patrimoine
 		</ion-item>
 		 
 	  </ion-list>
