--- a/www/templates/barber-wellness-menu.html
+++ b/www/templates/barber-wellness-menu.html
@@ -1,21 +1,21 @@
-<ion-view view-title="Vous informer">
+<ion-view view-title="Coiffure / Bien-Etre">
 	<ion-content>
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Offices du Tourisme
+		 Coups de Cœur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Agences de Voyages
+		  Bons Plans
+		</ion-item>
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		 Coiffure
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Ré’Apps Application
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Ré’Apps Bornes
+		  Institue de Beauté
 		</ion-item>
 		 
 	  </ion-list>
