--- a/www/templates/cities-menu.html
+++ b/www/templates/cities-menu.html
@@ -1,47 +1,50 @@
-<ion-view view-title="Vous déplacer">
+<ion-view view-title="Les Communes">
 	<ion-content>
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Location de Vélos
+			Toutes les communes
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Location de Voiture
+			 Rivedoux-Plage
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Autocars / Navettes
+			La Flotte
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Taxis
+			Saint-Martin-de-Ré
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 	 Sainte-Marie-de-Ré / La Noue
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bus Discothèque
-		</ion-item>
-
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bateaux
+		 	Le Bois-Plage-en-Ré
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Taxi
+			La Couarde-sur-Mer
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 	Loix
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bus
+		 	Ars-en-Ré
 		</ion-item>
-
+		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Transports à la Personne
+		 	Saint-Clément-des-Baleines
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		    A Pied ou à Vélo
-		</ion-item>
-		  
+		 	Les Portes-en-Ré
+		</ion-item>  
 		 
 	  </ion-list>
 	</ion-content>
