--- a/www/templates/culture-menu.html
+++ b/www/templates/culture-menu.html
@@ -2,39 +2,26 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event,1)">
-		 Tous les lieux culturels
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Artistes
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Coups de Coeur
+		  Galeries
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bons Plans
+		  Musées 
 		</ion-item>
 		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close ng-click="categorySearch($event)">
 		 Cinéma
 		</ion-item>
 		 
-		  <ion-item menu-close ng-click="categorySearch($event)">
-		  Musés
-		</ion-item>
-		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Arts
+		  Librairies / Presse ???
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Concerts / Spectacles
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Musique
-		</ion-item>
-		  
-		
+		 
 	  </ion-list>
 	</ion-content>
 </ion-view>
