--- a/www/templates/discovery-menu.html
+++ b/www/templates/discovery-menu.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Découverte">
 	<ion-content>
 	  <ion-list>
-		  <a class="item item-icon-right" href="#/app/festival">
+		 <!-- <a class="item item-icon-right" href="#/app/festival">
 			Fêtes et animations
 			<i class="icon icon18 ion-chevron-right"></i>
-		  </a>
+		  </a>-->
 		  
 		  <a class="item item-icon-right" href="#/app/nature">
 			 Patrimoine et nature
