--- a/www/templates/eat-well-menu.html
+++ b/www/templates/eat-well-menu.html
@@ -18,42 +18,39 @@
 		  Gastronomiques
 		</ion-item>
 		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close ng-click="categorySearch($event)">
 		 Brasseries
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Restaurants
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Restaurants fruit de mer
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Dégustation Fruits de Mer
 		</ion-item>
 		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Bars Pubs Cafés
+		 Dégustation Fruits de Mer
 		</ion-item>
-		 
+	    
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Bars à Vins
-		</ion-item> 
+		 Cuisine du Monde
+		</ion-item>  
 		
 		<ion-item menu-close ng-click="categorySearch($event)">
 		 Pizzerias
 		</ion-item> 
 		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
+		 <ion-item menu-close ng-click="categorySearch($event)">
 		 A Emporter
-		</ion-item>
+		</ion-item>  
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Cuisine du Monde
+		  Food Truck / Traiteurs
 		</ion-item>
-		 
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Bars à Vins / Caves à Vins
+		</ion-item> 
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Chocolatiers / Glaciers
+		</ion-item>
+		  
 	  </ion-list>
 	</ion-content>
+	
 </ion-view>
