--- a/www/templates/future-reason-menu.html
+++ b/www/templates/future-reason-menu.html
@@ -1,34 +1,31 @@
-<ion-view view-title="Monde de la nuit">
+<ion-view view-title="Les raisons de venir">
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event,1)">
-		 Tout le monde de la nuit
+		<ion-item menu-close ng-click="categorySearch($event)">
+			L’île de Ré
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Coups de Coeur
+			L’histoire
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bons Plans
+			Un paradis d’activités
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bars
+			Une terre de saveurs
 		</ion-item>
-		
+		 
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Discothèques
+		 	Une nature unique
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Festivals
+		 	Le vélo, un art de vivre
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Navettes
-		</ion-item>
+		 
 	  </ion-list>
 	</ion-content>
 </ion-view>
