--- a/www/templates/mode-shopping-menu.html
+++ b/www/templates/mode-shopping-menu.html
@@ -1,47 +1,50 @@
-<ion-view view-title="Vous déplacer">
+<ion-view view-title=" Mode/deco = Shopping">
 	<ion-content>
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Location de Vélos
+		 Coups de Cœur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Location de Voiture
+		  Bons Plans
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Mode
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Autocars / Navettes
+		  Déco – Ameublement
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Taxis
+		 Brocante
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bus Discothèque
+		 Opticiens
 		</ion-item>
-
+		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bateaux
+		 Fleuristes – Pépinières
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Taxi
+		 Sport – Surf Shop
+		</ion-item> 
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Bijoux – Accessoires
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bus
-		</ion-item>
-
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Transports à la Personne
-		</ion-item>
+		 Électroménager
+		</ion-item>   
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		    A Pied ou à Vélo
-		</ion-item>
-		  
+		 Bricolage
+		</ion-item> 
 		 
 	  </ion-list>
 	</ion-content>
