--- a/www/templates/nature-menu.html
+++ b/www/templates/nature-menu.html
@@ -2,19 +2,19 @@
 	<ion-content>
 	  <ion-list>
 		<ion-item menu-close ng-click="categorySearch($event)">
-			Tout le patrimoine
+			 Tout le Patrimoine
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
-			Tous les lieux nature
+			Tous les Lieux "Nature"
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
-			Promenades en ner
+			Promenades en Mer
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
-			Visite de l’estran
+			Visites de l’Estran
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
-			Visites des marées
+			Visites des Marais
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
 			Ecomusée
