--- a/www/templates/re-island-menu.html
+++ b/www/templates/re-island-menu.html
@@ -1,5 +1,21 @@
 <ion-view view-title="L’île de Ré">
 	<ion-content>		 
-		<ion-list> <p style="padding:10px;">Comming soon</p></ion-list>
+		  <ion-list>
+			  <a class="item item-icon-right" href="#/app/future-reason">
+				Les raisons de venir
+				<i class="icon icon18 ion-chevron-right"></i>
+			  </a>
+
+			  <a class="item item-icon-right" href="#/app/cities">
+				 Les Communes
+				<i class="icon icon18 ion-chevron-right"></i>
+			  </a>
+ 
+			  <a class="item item-icon-right" href="#/app/convinent">
+				 Pratique
+				<i class="icon icon18 ion-chevron-right"></i>
+			  </a>
+			  
+		  </ion-list>
 	</ion-content>
 </ion-view>
