--- a/www/templates/sports-recreation-menu.html
+++ b/www/templates/sports-recreation-menu.html
@@ -1,9 +1,9 @@
-<ion-view view-title="Activités sportives-détentes">
+<ion-view view-title="Sports - détente">
 	<ion-content>
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event,1)">
-			Toutes les activités de loisirs
+			Toutes les activités
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -14,42 +14,39 @@
 		  Bons Plans
 		</ion-item>
 		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
-		  Clubs enfants
-		</ion-item>
-		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
-		 Golf
-		</ion-item>
-		  
 		<ion-item menu-close ng-click="categorySearch($event)">
 		 Tennis / Squash
 		</ion-item>
 		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Golf
+		</ion-item>
+
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Ecuries / Poney Club
+		</ion-item>
+		  
+		 <ion-item menu-close ng-click="categorySearch($event)">
+		  Enseignement
+		</ion-item> 
+		 
 		  <ion-item menu-close ng-click="categorySearch($event)">
+		  Skate
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
 		  Danse
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Sports de combat
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Massages
+		  Relaxation
 		</ion-item>
 		  
 		  <ion-item menu-close ng-click="categorySearch($event)">
-		   SPA
+		  Pour les Enfants
 		</ion-item>
-		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
-		Yoga
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Skate
-		</ion-item>
-		  
+		 
 	  </ion-list>
 	</ion-content>
 </ion-view>
