--- a/www/templates/trade-menu.html
+++ b/www/templates/trade-menu.html
@@ -1,59 +1,51 @@
 <ion-view view-title="Commerce">
 	<ion-content>
 	  <ion-list>
+		  <a class="item item-icon-right" href="#/app/made-in-re">
+			Made in Ré
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
 		  
-		<ion-item menu-close ng-click="categorySearch($event,1)">
-		  Tous les commerces
-		</ion-item>
+		  <a class="item item-icon-right" href="#/app/grocery">
+			 Alimentation Generale
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Coups de Coeur
-		</ion-item>
+		  <a class="item item-icon-right" href="#/app/mode-shopping">
+			 Mode/deco = Shopping
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bons Plans
-		</ion-item>
+		  <a class="item item-icon-right" href="#/app/services">
+			 Services
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Alimentaires
-		</ion-item>
-		
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Terroirs
-		</ion-item>
+		  <a class="item item-icon-right" href="#/app/artisans">
+			Artisans
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
 		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
-		  Artisans
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Souvenirs
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Nautique
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Shopping
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Laveries
-		</ion-item>
-		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
-		  Banques
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Services ménages
-		</ion-item>
-		 
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Autres
-		</ion-item>
-		 
+		  <a class="item item-icon-right" href="#/app/barber-wellness">
+			Coiffure / Bien-Etre
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+
+		  <a class="item item-icon-right" href="#/app/auto-boat">
+			Auto – Moto/ Bateau
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+
+		  <a class="item item-icon-right" href="#/app/banking-insurance">
+			Banques / Assurances
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+
+		  <a class="item item-icon-right" href="#/app/culture">
+			Culture
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+
 	  </ion-list>
 	</ion-content>
 </ion-view>
