--- a/www/templates/water-acitivity-menu.html
+++ b/www/templates/water-acitivity-menu.html
@@ -19,7 +19,7 @@
 		</ion-item>
 		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Paddle surf
+		 Paddle
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -33,19 +33,19 @@
 		<ion-item menu-close ng-click="categorySearch($event)">
 			Kite surf
 		</ion-item>
-		  
-		  <ion-item menu-close ng-click="categorySearch($event)">
-		  Jet ski
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+
+		 <ion-item menu-close ng-click="categorySearch($event)">
 		  Kayak
 		</ion-item>
-		 
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Dériveur
+		  
+		 <ion-item menu-close ng-click="categorySearch($event)">
+		   Ecole de Voile 
 		</ion-item>
 		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		   Jet Ski/Bouées Tractées
+		</ion-item>
+ 
 		<ion-item menu-close ng-click="categorySearch($event)">
 		   Plongée
 		</ion-item> 
