--- a/www/templates/auto-boat-menu.html
+++ b/www/templates/auto-boat-menu.html
@@ -1,34 +1,35 @@
-<ion-view view-title="Monde de la nuit">
+<ion-view view-title="Auto – Moto/ Bateau">
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event,1)">
-		 Tout le monde de la nuit
-		</ion-item>
-		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Coups de Coeur
+		 Coups de Cœur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
 		  Bons Plans
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bars
-		</ion-item>
-		
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Discothèques
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		 Garages
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Festivals
+		  Contrôle Technique
+		</ion-item>
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		 Auto/Bateau Ecole
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Navettes
+		  Chantiers Navals
 		</ion-item>
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		 Accastillage
+		</ion-item>
+		  
 	  </ion-list>
 	</ion-content>
 </ion-view>
