--- a/www/templates/convinent-menu.html
+++ b/www/templates/convinent-menu.html
@@ -1,34 +1,27 @@
-<ion-view view-title="Monde de la nuit">
+<ion-view view-title="Pratique">
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event,1)">
-		 Tout le monde de la nuit
+		<ion-item menu-close ng-click="categorySearch($event)">
+			La carte de l’île de Ré
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Coups de Coeur
+			Annuaire
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bons Plans
+			Tous les Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bars
+			Tous les Bons Plans
 		</ion-item>
-		
+		 
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Discothèques
+		 	Infos Pratiques
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Festivals
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Navettes
-		</ion-item>
+		 
 	  </ion-list>
 	</ion-content>
 </ion-view>
