--- a/www/templates/service-menu.html
+++ b/www/templates/service-menu.html
@@ -1,47 +1,50 @@
-<ion-view view-title="Vous déplacer">
+<ion-view view-title="Services">
 	<ion-content>
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Location de Vélos
+		 Coups de Cœur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Location de Voiture
+		  Bons Plans
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Laverie -  Pressing
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Autocars / Navettes
+		  Conciergerie - Ménage
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Taxis
+		 Informatique - Téléphonie
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bus Discothèque
+		 Couture - Retouche
 		</ion-item>
-
+		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bateaux
+		 Salle de Sport
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Taxi
+		 Cordonnerie – Clé Minute
+		</ion-item> 
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Toilettage
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   En Bus
-		</ion-item>
-
-		<ion-item menu-close ng-click="categorySearch($event)">
-		   Transports à la Personne
-		</ion-item>
+		 Parapharmacie
+		</ion-item>   
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		    A Pied ou à Vélo
-		</ion-item>
-		  
+		Tabac-Vap / Presse
+		</ion-item> 
 		 
 	  </ion-list>
 	</ion-content>
