--- a/www/templates/stay-menu.html
+++ b/www/templates/stay-menu.html
@@ -11,10 +11,10 @@
 			<i class="icon icon18 ion-chevron-right"></i>
 		  </a>
 		  
-		  <a class="item item-icon-right" href="#/app/how-to-come">
+		  <!--<a class="item item-icon-right" href="#/app/how-to-come">
 			Comment venir
 			<i class="icon icon18 ion-chevron-right"></i>
-		  </a>
+		  </a>-->
 		  
 		  <a class="item item-icon-right" href="#/app/deplacer">
 			 Vous déplacer
@@ -26,13 +26,6 @@
 			<i class="icon icon18 ion-chevron-right"></i>
 		  </a>
 		  
-		   
-		  
-		<!--<ion-item href="#/app/accommodation">Hébergements</ion-item>
-		<ion-item href="#/app/eat-well">Bien manger</ion-item>
-		<ion-item href="#/app/how-to-come">Comment venir</ion-item>
-		<ion-item href="#/app/deplacer">Vous déplacer</ion-item>
-		<ion-item href="#/app/informer">Vous informer</ion-item>-->
 	  </ion-list>
 	</ion-content>
 </ion-view>
