--- a/www/templates/cities-menu.html
+++ b/www/templates/cities-menu.html
@@ -2,47 +2,47 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			Toutes les communes
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			 Rivedoux-Plage
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			La Flotte
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			Saint-Martin-de-Ré
 		</ion-item>
 		 
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	 Sainte-Marie-de-Ré / La Noue
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Le Bois-Plage-en-Ré
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			La Couarde-sur-Mer
 		</ion-item>
 		 
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Loix
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Ars-en-Ré
 		</ion-item>
 		
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Saint-Clément-des-Baleines
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Les Portes-en-Ré
 		</ion-item>  
 		 
