--- a/www/templates/convinent-menu.html
+++ b/www/templates/convinent-menu.html
@@ -2,23 +2,23 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			La carte de l’île de Ré
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			Annuaire
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			Tous les Coups de Coeur
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			Tous les Bons Plans
 		</ion-item>
 		 
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Infos Pratiques
 		</ion-item>
 		 
