--- a/www/templates/future-reason-menu.html
+++ b/www/templates/future-reason-menu.html
@@ -2,27 +2,27 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			L’île de Ré
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			L’histoire
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			Un paradis d’activités
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 			Une terre de saveurs
 		</ion-item>
 		 
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Une nature unique
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close>
 		 	Le vélo, un art de vivre
 		</ion-item>
 		 
