--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -326,3 +326,41 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	line-height: 24px;
 	min-height: 40px;
 }
+
+// Faavorites
+.img-responsive
+{
+	max-width: 100%;
+	height: 100%;
+}
+.favorite-wrap
+{
+	>h3
+	{
+		font-size: 16px;
+		line-height: 24px;
+		text-transform: uppercase;
+		color: #ff1f20;
+		margin: 10px 0;
+	}
+	p
+	{
+		white-space: normal;
+		margin: 10px 0;
+	}
+	>a
+	{
+		text-decoration: none;
+	}
+}
+.img-wrapper
+{
+	position: relative;
+	padding-top: 25px;
+	>.heart
+	{
+		position: absolute;
+		top: -10px;
+		left: -2px;
+	}
+}
