--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9927,3 +9927,29 @@ a.button {
 .button-medium {
   line-height: 24px;
   min-height: 40px; }
+
+.img-responsive {
+  max-width: 100%;
+  height: 100%; }
+
+.favorite-wrap > h3 {
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ff1f20;
+  margin: 10px 0; }
+
+.favorite-wrap p {
+  white-space: normal;
+  margin: 10px 0; }
+
+.favorite-wrap > a {
+  text-decoration: none; }
+
+.img-wrapper {
+  position: relative;
+  padding-top: 25px; }
+  .img-wrapper > .heart {
+    position: absolute;
+    top: -10px;
+    left: -2px; }
