--- a/www/templates/listing.html
+++ b/www/templates/listing.html
@@ -1,7 +1,8 @@
-<ion-view view-title="{{viewTitle}}" hide-back-button=false>
+<ion-view view-title="{{viewTitle}}" hide-back-button="false">
 	 
 	<ion-content>		 
 		<ion-list>
+			
 			<div class="loader" ng-show="loaderIcon">
 				 <ion-spinner icon="android"></ion-spinner>
 			</div>
@@ -34,6 +35,8 @@
 				<p>Aucun résultat</p>
 			</ion-item>
 			
+			<!--<button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>	
+			-->
 		</ion-list>
 		
 	</ion-content>
