--- a/www/templates/re-island-menu.html
+++ b/www/templates/re-island-menu.html
@@ -16,6 +16,11 @@
 				<i class="icon icon18 ion-chevron-right"></i>
 			  </a>
 			  
+			  <a class="item item-icon-right" href="#/app/favorites">
+				 Nos coups de coeur !
+				<i class="icon icon18 ion-chevron-right"></i>
+			  </a>
+			  
 		  </ion-list>
 	</ion-content>
 </ion-view>
