--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $line-height-base:1.4 !default;
 
 // Forms
 $item-default-border:#1b8dd9;
-$input-color-placeholder:#cccccc;
+$input-color-placeholder:#999;
 
 /*$item-default-bg:transparent;*/
 $item-default-active-bg:#d3e0ef;
