--- a/www/templates/re-island-menu.html
+++ b/www/templates/re-island-menu.html
@@ -16,7 +16,7 @@
 				<i class="icon icon18 ion-chevron-right"></i>
 			  </a>
 			  
-			  <a class="item item-icon-right" href="#/app/favorites">
+			  <a class="item item-icon-right" ng-click="getArticle();">
 				 Nos coups de coeur !
 				<i class="icon icon18 ion-chevron-right"></i>
 			  </a>
