--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7710,11 +7710,11 @@ input[type="color"] {
 textarea {
   padding-left: 0; }
   textarea::-moz-placeholder {
-    color: #cccccc; }
+    color: #999; }
   textarea:-ms-input-placeholder {
-    color: #cccccc; }
+    color: #999; }
   textarea::-webkit-input-placeholder {
-    color: #cccccc;
+    color: #999;
     text-indent: -3px; }
 
 textarea {
@@ -7763,15 +7763,15 @@ input[type="file"] {
 
 input::-moz-placeholder,
 textarea::-moz-placeholder {
-  color: #cccccc; }
+  color: #999; }
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
-  color: #cccccc; }
+  color: #999; }
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #cccccc;
+  color: #999;
   text-indent: 0; }
 
 input[disabled],
@@ -9732,14 +9732,14 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+.text-blue {
+  color: #3498d8 !important; }
+
 .business-list-wrapper > h2 {
   margin-bottom: 10px;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 24px; }
-
-.business-list-wrapper .text-blue {
-  color: #3498d8; }
 
 .business-list-wrapper p {
   white-space: normal;
@@ -9933,15 +9933,16 @@ a.button {
   height: 100%; }
 
 .favorite-wrap > h3 {
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 27px;
   text-transform: uppercase;
   color: #ff1f20;
   margin: 10px 0; }
 
 .favorite-wrap p {
   white-space: normal;
-  margin: 10px 0; }
+  margin: 10px 0;
+  height: 112px; }
 
 .favorite-wrap > a {
   text-decoration: none; }
@@ -9953,3 +9954,49 @@ a.button {
     position: absolute;
     top: -10px;
     left: -2px; }
+
+.favorite-view-wrapper {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 300; }
+  .favorite-view-wrapper > h2 {
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 5px;
+    color: #333;
+    font-weight: 300; }
+  .favorite-view-wrapper > p {
+    white-space: normal; }
+  .favorite-view-wrapper > p, .favorite-view-wrapper > address {
+    margin-bottom: 15px; }
+  .favorite-view-wrapper > address {
+    color: #666;
+    white-space: normal;
+    line-height: 26px; }
+
+.contact-wrapper {
+  margin-bottom: 15px; }
+
+.posted-comment {
+  margin: 10px 0; }
+  .posted-comment > h3 {
+    font-weight: 300; }
+    .posted-comment > h3 > strong {
+      color: #333; }
+
+.comment-wrap .list .item {
+  background: #fff !important;
+  margin: 10px 0;
+  border-radius: 2px;
+  border-color: #ccc; }
+  .comment-wrap .list .item > input {
+    height: 26px; }
+  .comment-wrap .list .item > textarea, .comment-wrap .list .item > input {
+    font-size: 14px; }
+
+.post-button.button {
+  min-height: 32px;
+  line-height: 20px;
+  border-radius: 2px;
+  font-size: 14px; }
