--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,11 +8,11 @@
     <ion-nav-view  name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+ <!-- <ion-side-menu side="left">
 	  <ion-header-bar class="bar-calm">
 		  <h1 class="title">Menu </h1>
 	  </ion-header-bar>
 	  
 	  <ion-nav-view name="sideMenuItem"></ion-nav-view>
-  </ion-side-menu>
+  </ion-side-menu>-->
 </ion-side-menus>
