--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -339,7 +339,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		font-size: 18px;
 		line-height: 27px;
 		text-transform: uppercase;
-		color: #ff1f20;
+		color: #222;
 		margin: 10px 0;
 	}
 	p
@@ -351,6 +351,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	>a
 	{
 		text-decoration: none;
+		cursor: pointer;
 	}
 }
 .img-wrapper
@@ -375,7 +376,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		font-size: 16px;
 		line-height: 24px;
 		margin-bottom: 5px;
-		color: #333;
+		color: #202020;
 		font-weight: 300;
 	}
 	>p
@@ -439,4 +440,18 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		border-radius: 2px;
 		font-size: 14px;
 	}
+}
+.rating
+{
+	margin: 10px 0 5px;
+	display: inline-block;
+	vertical-align: middle;
+}
+.popup-body
+{
+	text-align: center;
+}
+.backdrop
+{
+	background-color: rgba(0, 0, 0, 0.5);
 }
