--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -455,3 +455,16 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 {
 	background-color: rgba(0, 0, 0, 0.5);
 }
+.select-box
+{
+	.input-label
+	{
+		padding: 4px 10px 4px 0;
+		font-size: 14px;
+		color: #333;
+	}
+	>select
+	{
+		font-size: 14px;
+	}
+}
