--- a/www/templates/nature-menu.html
+++ b/www/templates/nature-menu.html
@@ -5,7 +5,7 @@
 			 Tout le Patrimoine
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
-			Tous les Lieux "Nature"
+			Tous les Lieux Nature
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
 			Promenades en Mer
