--- a/www/templates/listing.html
+++ b/www/templates/listing.html
@@ -26,6 +26,8 @@
 					</div>
 					
 					<button ng-click="viewBusiness($index)" class="button button-outline button-positive button-medium">Obtenir l'itinéraire</button>
+					 
+					<button ng-click="bookAppoinment();" class="button button-outline button-positive button-medium">Réservez appoinment</button>
 				</div>
 			</ion-item>
 			
