Terms and condition's popup

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -766,3 +766,11 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	font-size: 14px;
 	line-height: 27px;
 }
+.custom-popup
+{
+	p
+	{
+		font-size: 14px;
+		line-height: 22px;
+	}
+}
