--- a/www/templates/book-appoinment.html
+++ b/www/templates/book-appoinment.html
@@ -3,22 +3,23 @@
 	  <ion-list>
 		  
 		 <ion-item>
-			<form class="block-field appoinmentForm" ng-submit="appoinmentData(appDate,appTime,appMsg,appTerm)">
+			<form class="block-field appoinmentForm" ng-submit="appoinmentData(appData.appDate,appData.appTime,appData.appMsg,appData.appTerms)">
 				<div class="list">
 				  <label class="item item-input">
-					<input type="text" ng-model="appDate" pikaday="myPickerObject" format="MM/DD/YYYY" placeholder="Date">
+					<input type="text" ng-model="appData.appDate" pikaday="myPickerObject" format="MM/DD/YYYY" placeholder="Date">
 				  </label>
 					
 				  <label class="item item-input position-static">
-					<input type="text" ng-model="appTime" time-picker placeholder="Time">
+					<input type="text" ng-model="appData.appTime" time-picker placeholder="Time">
 				  </label>
 					
 				  <label class="item item-input">
-					<textarea  ng-model="appMsg" placeholder="Comments"></textarea>
+					<textarea  ng-model="appData.appMsg" placeholder="Comments"></textarea>
 				  </label>
 					
-				  <ion-checkbox ng-model="appTerms" ng-click="term($event);"> Terms and conditions</ion-checkbox>
-					
+				  <ion-checkbox ng-model="appData.appTerms" ng-change="agreeTerms();"> Terms and conditions</ion-checkbox>
+				  	
+				  <!--<input type="checkbox" ng-model="appData.appTerms" ng-click="term($event);"/>-->
 				</div>
 				 
 				<button class="button button-block button-positive">Book an appoinment</button>
